forEnersys/nthing Salesforce CPQ/objects/LookupQuery__c.object
<CustomObject>
    <fields>
        <fullName>LookupField__c</fullName>
        <description>API Name of the custom field used in the query.</description>
        <inlineHelpText>API Name of the custom field used in the query.</inlineHelpText>
        <label>Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Category__c</fullName>
                </value>
                <value>
                    <fullName>LOB_Number__c</fullName>
                </value>
                <value>
                    <fullName>Item_Group_Minimum__c</fullName>
                </value>
                <value>
                    <fullName>Item_Group_Maximum__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <description>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value.</description>
        <inlineHelpText>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value.</inlineHelpText>
        <label>Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Value</fullName>
                </value>
                <value>
                    <fullName>Static Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>The operator that is applied when comparing the Field with the Value.</description>
        <inlineHelpText>The operator that is applied when comparing the Field with the Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentRuleIsActive__c</fullName>
        <formula>PriceRule__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceRule__c</fullName>
        <label>Price Rule</label>
        <referenceTo>PriceRule__c</referenceTo>
        <relationshipLabel>Lookup Queries</relationshipLabel>
        <relationshipName>LookupQueries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RuleLookupObject__c</fullName>
        <formula>TEXT(PriceRule__r.LookupObject__c)</formula>
        <label>Parent Rule Lookup Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(PriceRule__r.TargetObject__c, &apos;Calculator&apos;) || ISPICKVAL(PriceRule__r.TargetObject__c, &apos;Quote Line&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestedField__c</fullName>
        <description>Field on Quote or Quote Line object that is evaluated by this query. Required if Match Type = Field Value.</description>
        <inlineHelpText>Field on Quote or Quote Line object that is evaluated by this query. Required if Match Type = Field Value.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Item_Group__c</fullName>
                </value>
                <value>
                    <fullName>LOB_Number__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestedObject__c</fullName>
        <description>Object against which the query is evaluated. Required if Match Type = Field Value.</description>
        <inlineHelpText>Object against which the query is evaluated. Required if Match Type = Field Value.</inlineHelpText>
        <label>Tested Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestedValue__c</fullName>
        <description>The value you want to match in the field you selected using the operator chosen. Required if Match Type = Static Value.</description>
        <inlineHelpText>The value you want to match in the field you selected using the operator chosen. Required if Match Type = Static Value.</inlineHelpText>
        <label>Tested Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Query</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lookup Query #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Match_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(MatchType__c, &apos;Static Value&apos;) &amp;&amp; ISBLANK( TestedValue__c)) || (ISPICKVAL(MatchType__c, &apos;Field Value&apos;) &amp;&amp; (ISPICKVAL(TestedField__c, &apos;&apos;) || ISPICKVAL(TestedObject__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Tested Value is required if Match Type = Static Value. Tested Object and Tested Field are required if Match Type = Field Value.</errorMessage>
    </validationRules>
</CustomObject>